--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 
 /* Body light or darker themes */
 .standard {
-    background-image: linear-gradient(100deg, #575656, #062e3f);
+    background-image: linear-gradient(100deg, #380036, #0cbaba);
     color: #ffdfdb;
     transition: 0.3s linear;
 }
@@ -49,6 +49,19 @@ body {
     width: 100%;
 }
 
+#weather {
+    align-items: center;
+    align-self: flex-start;
+    display: flex;
+    flex-direction: column;
+    font-size: 1rem;
+    justify-content: space-around;
+    margin-right: 3%;
+    position: absolute;
+    padding-left: 5px;
+    top: 0px;
+}
+
 /* Theme buttons div */
 .flexrow-container {
     align-items: center;
@@ -56,6 +69,7 @@ body {
     display: flex;
     justify-content: space-around;
     margin-right: 3%;
+    height: 100px;
 }
 
 .theme-selector {
@@ -77,7 +91,7 @@ body {
 }
 
 .standard-theme {
-    background-image: linear-gradient(100deg, #575656, #062e3f);
+    background-image: linear-gradient(100deg, #380036, #0cbaba);
 }
 
 .light-theme {
@@ -301,10 +315,6 @@ form button {
     margin: 0 5px;
 }
 
-.fas.fa-edit, fas.fa-trash {
-    pointer-events: none;
-}
-
 .todo-item {
     padding: 0rem 0.5rem;
 }
@@ -363,6 +373,17 @@ form button {
         margin-top: 30px;
         max-width: 330px;
     }
+
+    #weather {
+        position: static;
+        align-items: center;
+        align-self: center;
+    }
+
+    .flexrow-container {
+        height: 70px;
+    }
+
 }
 
 @media only screen and (max-width: 400px) {
