--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body {
     justify-content: space-around;
     margin-right: 3%;
     position: absolute;
-    padding-left: 5px;
+    margin-left: 30px;
     top: 0px;
 }
 
